added vocabcache reduce