@@ -21,7 +21,10 @@ package org.deeplearning4j.spark.text;
 import org.apache.spark.SparkConf;
 import org.apache.spark.api.java.JavaRDD;
 import org.apache.spark.api.java.JavaSparkContext;
+import org.apache.spark.api.java.function.Function;
+import org.apache.spark.api.java.function.Function2;
 import org.apache.spark.broadcast.Broadcast;
+import org.deeplearning4j.berkeley.Counter;
 import org.deeplearning4j.berkeley.Pair;
 import org.deeplearning4j.models.word2vec.wordstore.VocabCache;
 import org.deeplearning4j.models.word2vec.wordstore.inmemory.InMemoryLookupCache;
@@ -91,8 +94,25 @@ public class TextPipeline {
         int nGrams = corpus.context().conf().getInt(Word2VecPerformer.N_GRAMS,1);
         return corpus.map(new TokenizerFunction(tokenizer,nGrams))
                 .map(new VocabCacheFunction(minWordFrequency,new InMemoryLookupCache(),broadcast))
-                .cache().collect().get(0);
+                .reduce(new Function2<Pair<VocabCache,Long>, Pair<VocabCache,Long>, Pair<VocabCache,Long>>() {
+                    public Pair<VocabCache,Long> call(Pair<VocabCache,Long> a, Pair<VocabCache,Long> b) {
+                        // Add InMemoryLookupCache
+                        InMemoryLookupCache bVocabCache = (InMemoryLookupCache) b.getFirst();
+                        InMemoryLookupCache aVocabCache = (InMemoryLookupCache) a.getFirst();
+                        Counter<String> bWordFreq = bVocabCache.getWordFrequencies();
+                        bWordFreq.incrementAll(aVocabCache.getWordFrequencies());
+                        bVocabCache.setWordFrequencies(bWordFreq);
+                        // Add words encountered
+                        Long sumWordEncountered = b.getSecond() + a.getSecond();
+                        return new Pair<>((VocabCache)bVocabCache, sumWordEncountered);
+                    }
+                });
     }
+
+    //Instantiate accumulator
+    //Override addInPlace to be a Counter
+    //If stopword, add to STOP, otherwise count them as normal
+    //Trim the words that are fewer than 5 words
 
     /**
      * Get a vocab cache with all of the vocab based on the
@@ -106,6 +126,7 @@ public class TextPipeline {
                 .map(new VocabCacheFunction(minWordFrequency,new InMemoryLookupCache(),broadcast))
                 .cache().collect().get(0);
     }
+
 
 
 }
